      the number of tracks in the playlist.  What was the "Playlist Length "
      constraint is now called "Playlist Duration".
    * MPRIS2 support for controlling Amarok over D-Bus.
    * New "Playdar Collection" allows searching for and listening
      to music provided by a running local Playdar service.

  CHANGES:
    * Current track applet: added action to open the tag dialog.
    * Improved appearance of current track applet when playback is stopped.
    * Better scrolling in the applet explorer.
    * The default moodbar style now uses system colors.
    * Added tray icon context-menu action to open the preferences dialog.
    * Show a progress bar while loading pages in the Wikipedia applet.
    * Added option to right-align "year" in the albums applet.
    * Improved alignment of tracks in the albums applet.
    * Scroll to the current album and make its tracks visible in the albums
      applet. (BR 187011)
    * Added ability to expand/collapse/drag disc items in the albums applet.
      (BR 249488)
    * Improved appearance of similar artist, upcoming events, and Wikipedia
      applets.
    * Improved presentation of suggested lyrics (currently only 3rd party
      scripts use).
    * Use QTooltip for playlist tooltips
    * Changed playlist delegate margins and inline editor formating.
    * Add "Added This Hour" filter preset to the collection brower widget.
    * Bumped KDE dependency to version 4.4., and Qt dependency to 4.6.
    * Print message when a file can't be copied to a media player.
      Patch by Sergey Ivanov <123kash@gmail.com>. (BR 203820)
    * Improved the usability of device items in Media Sources by adding tooltips.
    * Deleting items in the collection/file browser will move them to trash;
      pressing SHIFT while clicking the action will bypass trash.

  BUGFIXES:
    * Applets' settings dialogs were partly untranslatable. (BR 255971)
    * Fixed append&play action. Thanks Pieter van der Kloet for the patch. (BR 229706)